--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,16 @@
-version: '3.8'
+version: '3.7'
 services:
   website:
+   build:
+    context: .
+   ports:
+    - 80:80
+  unit-tests:
     build:
+      dockerfile: rspec.dockerfile
       context: .
-      dockerfile: Dockerfile
-    ports:
-      - 80:80
+    volumes:
+      - $PWD:/app
+    command:
+      - --pattern
+      - /app/spec/unit/*_spec.rb
